card redesign and avoid button alignment

--- a/src/app/appointments/appointments.component.scss
+++ b/src/app/appointments/appointments.component.scss
@@ -1,4 +1,11 @@
 @import '../../styles';
+.mat-toolbar {
+    background: #e9e9e9;
+    font-size: 17px;
+}
+.mat-toolbar-single-row {
+    height: 50px;
+}
 .appointments-page {
     // background: #e9e9e9;
     @media (min-width: 900px) {
@@ -9,9 +16,6 @@
     }
     .appointment-content {
         padding: 15px;
-    }
-    .mat-toolbar {
-        background: #e9e9e9;
     }
     .header-image {
         background-size: cover;
@@ -30,9 +34,12 @@
         .day-over {
             opacity: .3;
         }
-        .list-item {
+        .no-appointments {
             background: #e9e9e9;
             padding:10px 10px 0 10px;
+        }
+        .list-item {
+            
             height: 95%;
             .no-card {
                 font-size: 12px;
@@ -68,13 +75,15 @@
                     }
                 }
                 .mat-card-actions {
-                    margin-bottom: 0;
+                    margin: 0;
                     padding-bottom: 15px;
                     .mat-button {
                         margin: 4px;
                         border: 1px solid #e9e9e9;
                         line-height: 28px;
                         color: #656b6c;
+                        padding: 1px 18px;
+                        min-width: 100px;
                     }
                 }
             }
